Allow chrome-proxy-content-transform:identity as legal response header

BUG=738623

Review-Url: https://codereview.chromium.org/2966923002
Cr-Commit-Position: refs/heads/master@{#483879}

Former-commit-id: a1e266e3201ea9dd4f3f68009e83d4cf30584ae4